Add images Add some styling Render gallery and canvas

--- a/css/basics/helpers.css
+++ b/css/basics/helpers.css
@@ -12,6 +12,14 @@
   align-items: center;
 }
 
+.flex.column {
+  flex-direction: column;
+}
+
+.flex.justify-center{
+  justify-content: center;
+}
+
 /* LIST HELPERS */
 
 .clean-list {
