--- a/css/basics/layout.css
+++ b/css/basics/layout.css
@@ -2,13 +2,59 @@
 
 .main-layout {
   display: grid;
-  grid-template-columns: 32px 1fr 32px;
+  grid-template-columns: 128px 1fr 64px;
+  grid-template-areas: 
+  'header header header'
+  'aside main main'
+  'aside main main'
+  'footer footer footer';
+  grid-template-rows: auto 1fr auto;
+  /* min-height: 100vh */
 }
 
-.main-layout > *:not(.full) {
+
+.main-header {
+  display: grid;
+  grid-area: header;
+}
+
+.main-side-bar {
+  display: grid;
+  grid-area: aside;
+}
+
+.gallery-layout {
+  display: grid;
+  grid-area: main;
+  grid-template-columns: repeat(9, 162px);
+  grid-auto-rows: 160px;
+  grid-gap: 10px;
+  grid-auto-flow: dense;
+  height: 100vh;
+}
+
+.footer-layout {
+  display: grid;
+  grid-area: footer;
+  background-color: blue;
+}
+
+
+/* .main-layout > *:not(.full) {
   grid-column: 2;
 }
 
 .main-layout > *.full {
   grid-column: 1 / -1;
+} */
+
+/* ASIDE LAYOUT */
+/* .main-side-bar > * {
+  display: grid;
+  grid-column: 1;
 }
+
+.main-nav > *{
+  display: grid;
+  grid-column: 1;
+} */
