--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,8 @@
 /* COMPONENTS */
 
 @import url("./components/header.css");
+@import url("./components/side-nav.css");
+@import url("./components/gallery.css");
 @import url("./components/footer.css");
 
 
