--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
 @import url("./components/header.css");
 @import url("./components/side-nav.css");
 @import url("./components/gallery.css");
+@import url("./components/canvas.css");
 @import url("./components/footer.css");
 
 
