--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -3,8 +3,14 @@
   background-color: yellow;
 }
 
+img {
+  margin-bottom: 16px;
+  /* gap: 16px; */
+}
+
 .gallery-layout img {
   border-radius: 8px;
+  /* margin-bottom: 10px; */
   cursor: pointer;
 
   transition: scale 0.4s;
