fix layout and design

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,7 +1,14 @@
 .main-header {
   min-height: 65px;
   padding: 0 128px;
+  background-color: #fff;
   box-shadow: 0px 1px 0px 0px rgba(219, 219, 219, 1);
+  z-index: 3;
+
+  
+  position: sticky;
+  top: 0;
+  width: 100%;
 }
 
 .main-header .main-nav-list a {
