--- a/css/basics/base.css
+++ b/css/basics/base.css
@@ -4,9 +4,11 @@
 
 html {
   font-family: roboto-regular;
+  background-color: #F8F8F8;
   color: var(--ClrPriamyText);
   line-height: 1.714;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+  /* overflow-y: hidden; */
 }
 
 body {
