--- a/css/basics/helpers.css
+++ b/css/basics/helpers.css
@@ -20,6 +20,10 @@
   justify-content: center;
 }
 
+.flex.wrap {
+  flex-wrap: wrap;
+}
+
 /* GRID HELPERS */
 .grid {
   display: grid;
@@ -31,4 +35,11 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+
+
+/* HIDE */
+
+.hide {
+  display: none;
 }
