--- a/css/basics/layout.css
+++ b/css/basics/layout.css
@@ -2,49 +2,41 @@
 
 .main-layout {
   display: grid;
-  grid-template-columns: 128px 1fr; /* Two equal columns */
-  grid-template-rows: auto 1fr auto; /* Header, Main, and Footer */
+  grid-template-columns: 128px 1fr;
 }
 
 .main-layout > *.full {
   grid-column: 1 / -1;
-}
+} 
+
+/* .main-layout > *:not(.full, .main-side-bar) {
+  grid-column: 2;
+}  */
 
 
 /* SIDE BAR LAYOUT */
 .main-side-bar {
+  height: 100vh;
   grid-column: 1;
 }
 
-/* MAIN LAYOUT */
-.main-main {
-  grid-column: 2 / -1;
+
+/* CANVAS */
+
+/* .canvas-container {
   display: grid;
-  grid-template-columns: 1fr 64px;
+  grid-template-columns: 1fr 1fr;
+  grid-column: 2;
+  grid-row: 2  / 2;
 }
 
-/* GALLERY LAYOUT */
-.gallery-layout {
-  grid-column: 1;
-  grid-row: 1;
-  display: grid;
-  grid-template-columns: repeat(9, 1fr);
-  grid-auto-rows: 160px;
-  grid-gap: 10px;
-  grid-auto-flow: dense;
-}
-
-/* CANVAS LAYOUT */
-.canvas-container {
-  grid-column: 1; 
-  grid-row: 2;
-  display: grid;
-  gap: 10px;
+.canvas-actions {
+  grid-column: 2;
 }
 
 .canvas-object {
   grid-column: 1;
-}
-.canvas-actions {
-  grid-column: 2;
-}
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
