--- a/css/components/canvas.css
+++ b/css/components/canvas.css
@@ -1,15 +1,57 @@
 .canvas-container {
-  background-color: lightgoldenrodyellow;
-  border: 1px solid black;
   padding: 32px;
+  /* background-color: purple; */
+  display: flex;
+
+  width: 100vw;
+  height: calc(100vh - 65px - 40px);
+  margin: auto;
+
+
 }
 
 .canvas-actions {
-  background-color: green;
+  margin-left: 16px;
+  background-color: whitesmoke;
+  height: 100%;
+}
+
+.go-back {
+  /* font-family: roboto-medium; */
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #989898;
+
+  position: absolute;
+  top: 96px;
+  left: 32px;
   
+  cursor: pointer;
+}
+
+.go-back:hover {
+  color: var(--primaryClr);
+  font-family: roboto-medium;
+}
+
+.edit-text {
+  color: #727272;
+}
+
+/* .edit-text button {
+  all: unset;
+} */
+
+.edit-text-title {
+  font-family: roboto-medium;
+  font-size: 24px;
+  line-height: 28.13px;
+  color: #727272;
 }
 
 canvas {
+  /* width: 100%; */
+  display: flex;
   background-color: #fff;
   border: 1px solid black;
 }
