--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,6 +1,15 @@
 footer {
   background-color: #fff;
   color: #3a3a3a;
-  min-height: 65px;
+  /* min-height: 65px; */
+  box-shadow: 0px 0px 0px 1px rgba(219, 219, 219, 1);
+
+  padding: 8px 0;
   font-family: roboto-medium;
+
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+
+  z-index: 1;
 }
