--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -1,21 +1,18 @@
 .gallery-layout {
-  padding: 32px;
-  background-color: yellow;
-}
-
-img {
-  margin-bottom: 16px;
-  /* gap: 16px; */
+  padding: 27px;
+  max-width: 1500px;
 }
 
 .gallery-layout img {
   border-radius: 8px;
-  /* margin-bottom: 10px; */
+  margin-right: 8px;
   cursor: pointer;
+
+  width: 150px;
 
   transition: scale 0.4s;
 }
 
 .gallery-layout img:hover {
-  scale: 1.3;
+  scale: 1.1;
 }
