--- a/css/components/side-nav.css
+++ b/css/components/side-nav.css
@@ -1,5 +1,10 @@
 .main-side-bar {
-  background-color: red;
-
+  /* background-color: red; */
+  /* border-left: 1px solid ; */
+  background-color: #fff;
+  box-shadow: 1px 0px 0px 0px rgba(219, 219, 219, 1);
   padding: 16px;
+
+  z-index: 2;
+  
 }
