--- a/css/components/canvas.css
+++ b/css/components/canvas.css
@@ -14,6 +14,9 @@
   margin-left: 16px;
   background-color: whitesmoke;
   height: 100%;
+  width: 100%;
+
+  padding: 32px;
 }
 
 .go-back {
@@ -21,6 +24,7 @@
   font-size: 14px;
   line-height: 16.41px;
   color: #989898;
+  /* align-items: center; */
 
   position: absolute;
   top: 96px;
@@ -36,13 +40,18 @@
 
 .edit-text {
   color: #727272;
+  /* background-color: red; */
+  align-items: center;
 }
 
-/* .edit-text button {
-  all: unset;
-} */
+.edit-text-actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .edit-text-title {
+  align-content: center;
   font-family: roboto-medium;
   font-size: 24px;
   line-height: 28.13px;
