--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 @import url("./components/side-nav.css");
 @import url("./components/gallery.css");
 @import url("./components/canvas.css");
+@import url("./components/canvas-actions.css");
 @import url("./components/footer.css");
 
 
